--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -595,7 +595,7 @@
     border-radius: $border-radius;
 
     .prev_next {
-      font-family: $cute;
+      font-family: $sans-serif;
       color:$muted-text-color;
     }
   }
