--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -21,7 +21,7 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    {{ content }}
+    <!--{{ content }}-->
   </div>
   
   <article class="page h-entry" itemscope itemtype="https://schema.org/CreativeWork">
