--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -21,9 +21,9 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    <!--{{ content }}-->
+    {{ content }}
   </div>
-  
+  <!--
   <article class="page h-entry" itemscope itemtype="https://schema.org/CreativeWork">
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
@@ -71,3 +71,6 @@ layout: default
     {% endif %}
   </article>
 </div>
+-->
+
+<!--이부분은 포스트쪽 용인듯-->
